[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/EmbeddedResourceCreater/ResourceCreater.gd" type="Script" id=1]

[node name="Creater" type="Panel"]
margin_right = 200.0
margin_bottom = 300.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadFileDialog" type="FileDialog" parent="."]
margin_left = -45.0
margin_top = 165.0
margin_right = 555.0
margin_bottom = 465.0
window_title = "打开文件"
resizable = true
mode = 0
access = 2
show_hidden_files = true
current_dir = "/0_EmbeddedResourceCreate/EmbeddedResourceCreater"
current_path = "/0_EmbeddedResourceCreate/EmbeddedResourceCreater/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFileDialog" type="FileDialog" parent="."]
margin_right = 600.0
margin_bottom = 300.0
window_title = "保存文件"
resizable = true
access = 2
show_hidden_files = true
current_dir = "/0_EmbeddedResourceCreate/EmbeddedResourceCreater"
current_path = "/0_EmbeddedResourceCreate/EmbeddedResourceCreater/"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLoad" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
text = "Load Resource"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 78.0
text = "ImportPath(res://)"
editable = false

[node name="ButtonSave" type="Button" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 200.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 50 )
text = "Save Resource"

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 136.0
margin_right = 200.0
margin_bottom = 186.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 0
text = "Current: "
autowrap = true

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 580.0
margin_top = 155.0
margin_right = 1191.0
margin_bottom = 493.0
window_title = "保存文件"
__meta__ = {
"_edit_use_anchors_": false
}
